--- a/BuildingSecuritySimulation/Assembly-CSharp.csproj
+++ b/BuildingSecuritySimulation/Assembly-CSharp.csproj
@@ -61,13 +61,17 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\FileBrowser\Script\FileBrowser.cs" />
+    <Compile Include="Assets\FileBrowser\Script\TestFileBrowser.cs" />
     <Compile Include="Assets\Script\BuildManager.cs" />
     <Compile Include="Assets\Script\Character.cs" />
     <Compile Include="Assets\Script\FileManager.cs" />
     <Compile Include="Assets\Script\Simulation.cs" />
     <Compile Include="Assets\Script\Tile.cs" />
+    <Compile Include="Assets\Script\TileData.cs" />
     <Compile Include="Assets\Script\type.cs" />
     <Compile Include="Assets\Script\UIManager.cs" />
+    <None Include="Assets\FileBrowser\readme.txt" />
     <Reference Include="UnityEditor.StandardEvents">
       <HintPath>E:/BuildManager/BuildingSecuritySimulation/Library/ScriptAssemblies/UnityEditor.StandardEvents.dll</HintPath>
     </Reference>
