--- a/BuildingSecuritySimulation/Assembly-CSharp.csproj
+++ b/BuildingSecuritySimulation/Assembly-CSharp.csproj
@@ -71,7 +71,11 @@
     <Compile Include="Assets\Script\TileData.cs" />
     <Compile Include="Assets\Script\type.cs" />
     <Compile Include="Assets\Script\UIManager.cs" />
+    <None Include="Assets\logs\log20181121131945.txt" />
+    <None Include="Assets\logs\log2018112113732.txt" />
     <None Include="Assets\FileBrowser\readme.txt" />
+    <None Include="Assets\logs\log20181121131713.txt" />
+    <None Include="Assets\logs\log20181121131646.txt" />
     <Reference Include="UnityEditor.StandardEvents">
       <HintPath>E:/BuildManager/BuildingSecuritySimulation/Library/ScriptAssemblies/UnityEditor.StandardEvents.dll</HintPath>
     </Reference>
